--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -64,3 +64,17 @@ button:hover {
     align-items: center;
     flex-direction: column;
 }
+
+.tempBoxStyle{
+    background-color: #D9D9D9;
+    text-align: center;
+    width: 200px;
+    height: 150px;
+}
+
+.base{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 6px;
+}
