--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -6,6 +6,11 @@ h2 {
     font-size: x-large;
 }
 
+.main {
+    background-color: rgb(235, 228, 209);
+    height: 100vh;
+}
+
 .login-container {
     display: flex;
     flex-direction: column;
@@ -77,4 +82,80 @@ button:hover {
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 6px;
+    background-color: rgb(235, 228, 209);
+}
+
+.topBarStyle {
+    display: flex;
+    background-color: rgb(229, 86, 4);
+    top: 0;
+    height: 48px;
+    position: fixed;
+    width: 100%;
+}
+
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+    position: absolute;
+    width: 36px;
+    height: 30px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+    background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+    background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+    height: 24px;
+    width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+    background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+    background: #373a47;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+    fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+    color: #b8b7ad;
+    padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+    display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
 }
