hamburger menu and some other changes

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -9,13 +9,13 @@ h2 {
 .main {
     background-color: rgb(235, 228, 209);
     height: 100vh;
+    flex: auto;
 }
 
 .login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
 }
 
 .login-form {
