--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -13,6 +13,7 @@ h2 {
 }
 
 .login-container {
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,10 +74,13 @@ button:hover {
 }
 
 .tempBoxStyle{
-    background-color: #D9D9D9;
+    color: black;
+    background-color: #616161;
     text-align: center;
     width: 200px;
     height: 150px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
 }
 
 .base{
