--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -47,7 +47,7 @@ input {
     border-radius: 5px;
 }
 
-button {
+.customButton {
     width: 100%;
     padding: 10px;
     background-color: #26577C !important;
@@ -64,14 +64,6 @@ button:hover {
 }
 
 
-.mainArea {
-    display: flex;
-    height: 100vh;
-    background-color: rgb(235, 228, 209);
-    margin-top: 72px;
-    align-items: center;
-    flex-direction: column;
-}
 
 .tempBoxStyle{
     color: black;
@@ -94,9 +86,7 @@ button:hover {
 .topBarStyle {
     display: flex;
     background-color: rgb(229, 86, 4);
-    top: 0;
     height: 48px;
-    position: fixed;
     width: 100%;
 }
 
@@ -104,6 +94,7 @@ button:hover {
 /* Position and sizing of burger button */
 .bm-burger-button {
     position: absolute;
+    top: 10px;
     width: 36px;
     height: 30px;
 }
@@ -129,39 +120,30 @@ button:hover {
     background: #bdc3c7;
 }
 
-/*
-Sidebar wrapper styles
-Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-*/
 .bm-menu-wrap {
     position: fixed;
     height: 100%;
 }
 
-/* General sidebar styles */
 .bm-menu {
     background: #373a47;
     padding: 2.5em 1.5em 0;
     font-size: 1.15em;
 }
 
-/* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
     fill: #373a47;
 }
 
-/* Wrapper for item list */
 .bm-item-list {
     color: #b8b7ad;
     padding: 0.8em;
 }
 
-/* Individual item */
 .bm-item {
     display: inline-block;
 }
 
-/* Styling of overlay */
 .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
 }
