--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -84,6 +84,7 @@ button:hover {
     height: 150px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    border-radius: 6px;
 }
 
 .base {
